Mobile picklist visibility fix

--- a/force-app/main/facelift/lwc/hot_freelanceServiceAppointmentWrapper_v2/hot_freelanceServiceAppointmentWrapper_v2.css
+++ b/force-app/main/facelift/lwc/hot_freelanceServiceAppointmentWrapper_v2/hot_freelanceServiceAppointmentWrapper_v2.css
@@ -195,8 +195,9 @@
     }
 }
 
-@media (min-width: 576px) {
-    .mobile-only {
+@media (min-width: 768px) {
+    .mobile {
         display: none;
+        visibility: hidden;
     }
 }
